Update sharphook and fix tooltip scrollbar

--- a/src/Sidekick/wwwroot/css/site.css
+++ b/src/Sidekick/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 #blazor-error-ui {
     color: black;
 }
